[gd_scene load_steps=2 format=3 uid="uid://cj4yn0oudpp3j"]

[ext_resource type="Script" path="res://menu.gd" id="1_r6r70"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r6r70")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 24.0
offset_right = 114.0
offset_bottom = 55.0
text = "Day 1 - 1"

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 64.0
offset_right = 114.0
offset_bottom = 95.0
text = "Day 1 - 2"

[node name="Button3" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 104.0
offset_right = 114.0
offset_bottom = 135.0
text = "Day 2 - 1"

[node name="Button4" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 144.0
offset_right = 114.0
offset_bottom = 175.0
text = "Day 2 - 2"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 155.0
grow_horizontal = 2
grow_vertical = 2
text = "Something is wrong with global snow production, and you've been selected to take a look. The Elves have even given you a map; on it, they've used stars to mark the top fifty locations that are likely to be having problems.

You've been doing this long enough to know that to restore snow operations, you need to check all fifty stars by December 25th.

Collect stars by solving puzzles. Two puzzles will be made available on each day in the Advent calendar; the second puzzle is unlocked when you complete the first. Each puzzle grants one star. Good luck!

You try to ask why they can't just use a weather machine (\"not powerful enough\") and where they're even sending you (\"the sky\") and why your map looks mostly blank (\"you sure ask a lot of questions\") and hang on did you just say the sky (\"of course, where do you think snow comes from\") when you realize that the Elves are already loading you into a trebuchet (\"please hold still, we need to strap you in\").

As they're making the final adjustments, they discover that their calibration document (your puzzle input) has been amended by a very young Elf who was apparently just excited to show off her art skills. Consequently, the Elves are having trouble reading the values on the document.

The newly-improved calibration document consists of lines of text; each line originally contained a specific calibration value that the Elves now need to recover. On each line, the calibration value can be found by combining the first digit and the last digit (in that order) to form a single two-digit number.

For example:

1abc2
pqr3stu8vwx
a1b2c3d4e5f
treb7uchet
In this example, the calibration values of these four lines are 12, 38, 15, and 77. Adding these together produces 142.

Consider your entire calibration document. What is the sum of all of the calibration values?"

[connection signal="mouse_entered" from="Panel/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_day_1_1_button_pressed"]
[connection signal="mouse_entered" from="Panel/Button2" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_day_1_2_button_pressed"]
[connection signal="mouse_entered" from="Panel/Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="pressed" from="Panel/Button3" to="." method="_on_button_3_pressed"]
[connection signal="mouse_entered" from="Panel/Button4" to="." method="_on_button_3_mouse_entered"]
[connection signal="pressed" from="Panel/Button4" to="." method="_on_button_4_pressed"]
